Thu May 14 14:52:14 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.21.

Thu May 14 10:17:32 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Thu May 14 05:16:08 GMT 2015  Olly Betts <olly@survex.com>

	* omindex.cc: Message tweak.

Thu May 14 05:15:18 GMT 2015  Olly Betts <olly@survex.com>

	* outlookmsg2html.in: Fix handling of message/rfc822 subparts.

Thu May 14 04:16:34 GMT 2015  Olly Betts <olly@survex.com>

	* cdb_hash.cc,md5.cc: Remove 'register' as it's deprecated, and
	  likely to just be ignored by any modern compiler anyway.

Wed May 06 10:08:33 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Wed May 06 07:26:28 GMT 2015  Olly Betts <olly@survex.com>

	* omega.cc: Drop compilation date and time from output - they prevent
	  reproducible builds and the version number is sufficient
	  information.

Wed May 06 07:24:27 GMT 2015  Olly Betts <olly@survex.com>

	* commonhelp.cc,omega.cc,omindex.cc,scriptindex.cc: Add spaces between
	  literal strings and macros which expand to literal strings for C++11
	  compatibility.

Wed May 06 04:56:39 GMT 2015  Olly Betts <olly@survex.com>

	* Makefile.am: Add common/stringutils.cc to urlenctest_SOURCES, needed
	  now urldecode.h uses C_isxdigit().

Wed May 06 04:53:56 GMT 2015  Olly Betts <olly@survex.com>

	* configfile.cc,htmlparse.cc,myhtmlparse.cc,omega.cc,omindex.cc,
	  query.cc,scriptindex.cc,urldecode.h: Consistently use C_isupper(),
	  C_toupper(), etc as these versions aren't affected by the locale
	  setting, and also allow signed char values (so we don't need to
	  cast the argument to unsigned char).

Tue May 05 14:17:16 GMT 2015  Olly Betts <olly@survex.com>

	* templates/query: When listing matching terms, don't make the commas
	  italic.

Tue May 05 12:43:59 GMT 2015  Olly Betts <olly@survex.com>

	* docs/overview.rst: Document 'E' prefixed boolean terms for filtering
	  by extension (see #668, reported by bramvdh).
