@@ -1,3 +1,9 @@
+Fri May 15 05:16:05 GMT 2015  Olly Betts <olly@survex.com>
+
+	* Makefile.am,configure.ac: Use -no-install or -no-fast-install when
+	  linking test programs which never get installed, which means libtool
+	  can often avoid creating a shell script wrapper.
+
 Thu May 14 14:52:14 GMT 2015  Olly Betts <olly@survex.com>
 
 	* NEWS,configure.ac: Update for 1.2.21.
